wiring up first attempt of new publications end point

--- a/uniprotkb-rest/src/main/resources/publication.facet.properties
+++ b/uniprotkb-rest/src/main/resources/publication.facet.properties
@@ -7,5 +7,5 @@ facet.publication.types.allowmultipleselection=true
 facet.publication.categories.label=Category
 facet.publication.categories.allowmultipleselection=true
 
-facet.publication.is_large_scale.label=Scale
+facet.publication.is_large_scale.label=Large Scale
 facet.publication.is_large_scale.allowmultipleselection=false
