partial fix for query boost issue

--- a/uniprotkb-rest/src/main/resources/application.properties
+++ b/uniprotkb-rest/src/main/resources/application.properties
@@ -36,8 +36,8 @@ spring.data.solr.zkHost=wp-np2-b9.ebi.ac.uk:4191,ves-hx-ee.ebi.ac.uk:4191,ves-hx
 #spring.data.solr.httphost=https://www.ebi.ac.uk/uniprot/services/search/
 #spring.data.solr.httphost=http://localhost:8082/solr/
 
-spring.data.solr.username=
-spring.data.solr.password=
+spring.data.solr.username=solr_admin
+spring.data.solr.password=nimda
 spring.data.solr.connectionTimeout=20000
 spring.data.solr.socketTimeout=3600000
 
