wiring up everything and getting facetting working

--- a/uniprotkb-rest/src/main/resources/publication.facet.properties
+++ b/uniprotkb-rest/src/main/resources/publication.facet.properties
@@ -1,11 +1,21 @@
 facet.mincount=1
 facet.limit=5
 
+
+
+
 facet.publication.types.label=Source
 facet.publication.types.allowmultipleselection=true
+facet.publication.types.value.0=Community mapped
+facet.publication.types.value.1=Computationally mapped
+facet.publication.types.value.2=UniProtKB reviewed (Swiss-Prot)
+facet.publication.types.value.3=UniProtKB unreviewed (TrEMBL)
 
 facet.publication.categories.label=Category
 facet.publication.categories.allowmultipleselection=true
 
+
 facet.publication.is_large_scale.label=Large Scale
 facet.publication.is_large_scale.allowmultipleselection=false
+facet.publication.is_large_scale.value.false=Small scale
+facet.publication.is_large_scale.value.true=Large scale
