update the Literature tests after refactoring

--- a/support-data-rest/src/main/resources/facet.properties
+++ b/support-data-rest/src/main/resources/facet.properties
@@ -46,11 +46,15 @@ facet.taxonomy.proteome.label=Proteome
 facet.taxonomy.proteome.allowmultipleselection=false
 facet.taxonomy.proteome.value.true=a proteome
 facet.taxonomy.proteome.value.false=without proteome
-facet.literature.citedin.label=UniProtKB Citation
-facet.literature.citedin.allowmultipleselection=false
-facet.literature.citedin.value.true=UniProtKB
-facet.literature.citedin.value.false=without UniProtKB
-facet.literature.mappedin.label=Mapped Citation
-facet.literature.mappedin.allowmultipleselection=false
-facet.literature.mappedin.value.true=Mapped
-facet.literature.mappedin.value.false=without Mapped
+facet.literature.is_uniprotkb_mapped.label=UniProtKB Citation
+facet.literature.is_uniprotkb_mapped.allowmultipleselection=false
+facet.literature.is_uniprotkb_mapped.value.true=UniProtKB
+facet.literature.is_uniprotkb_mapped.value.false=Without UniProtKB
+facet.literature.is_computational_mapped.label=Computational Mapped Citation
+facet.literature.is_computational_mapped.allowmultipleselection=false
+facet.literature.is_computational_mapped.value.true=Computational Mapped
+facet.literature.is_computational_mapped.value.false=Without Computational Mapped
+facet.literature.is_community_mapped.label=Community Mapped Citation
+facet.literature.is_community_mapped.allowmultipleselection=false
+facet.literature.is_community_mapped.value.true=Community Mapped
+facet.literature.is_community_mapped.value.false=Without Community Mapped
