--- a/support-data-rest/src/main/resources/message.properties
+++ b/support-data-rest/src/main/resources/message.properties
@@ -29,8 +29,8 @@ search.literature.invalid.accession=The accession parameter has invalid format. 
 search.literature.invalid.query.field='{0}' is not a valid search field
 search.literature.invalid.query.field.type='{0}' filter type '{1}' is invalid. Expected '{2}' filter type
 search.literature.invalid.query.field.value.id=The PubMed id value should be a number
-search.literature.invalid.query.field.value.citedin=The literature citedin filter value should be a boolean
-search.literature.invalid.query.field.value.mappedin=The literature mappedin filter value should be a boolean
+search.literature.invalid.query.field.value.is_uniprotkb_mapped=The literature is_uniprotkb_mapped filter value should be a boolean
+search.literature.invalid.query.field.value.is_computational_mapped=The literature is_computational_mapped filter value should be a boolean
 ############## DiseaseEntry error message ##############
 search.disease.invalid.query.field='{0}' is not a valid search field
 search.disease.invalid.query.field.type='{0}' filter type '{1}' is invalid. Expected '{2}' filter type
