update the message for the new facet community

--- a/support-data-rest/src/main/resources/message.properties
+++ b/support-data-rest/src/main/resources/message.properties
@@ -31,6 +31,7 @@ search.literature.invalid.query.field.type='{0}' filter type '{1}' is invalid. E
 search.literature.invalid.query.field.value.id=The PubMed id value should be a number
 search.literature.invalid.query.field.value.is_uniprotkb_mapped=The literature is_uniprotkb_mapped filter value should be a boolean
 search.literature.invalid.query.field.value.is_computational_mapped=The literature is_computational_mapped filter value should be a boolean
+search.literature.invalid.query.field.value.is_community_mapped=The literature is_community_mapped filter value should be a boolean
 ############## DiseaseEntry error message ##############
 search.disease.invalid.query.field='{0}' is not a valid search field
 search.disease.invalid.query.field.type='{0}' filter type '{1}' is invalid. Expected '{2}' filter type
