--- a/uniprotkb-rest/src/main/resources/publication.facet.properties
+++ b/uniprotkb-rest/src/main/resources/publication.facet.properties
@@ -15,7 +15,7 @@ facet.publication.categories.label=Category
 facet.publication.categories.allowmultipleselection=true
 
 
-facet.publication.is_large_scale.label=Large Scale
+facet.publication.is_large_scale.label=Study type
 facet.publication.is_large_scale.allowmultipleselection=false
 facet.publication.is_large_scale.value.false=Small scale
 facet.publication.is_large_scale.value.true=Large scale
